tests/should_succeed/assert_success.jou
import "stdlib/io.jou"

assert WINDOWS or not WINDOWS

def main() -> int:
    assert True
    assert 1 == 1
    printf("ok\n")  # Output: ok
    return 0
