tests/syntax_error/number_underscore_prefix_oct.jou
def main() -> int:
    return 0o_777  # Error: invalid number or variable name "0o_777"
